# for build libcstl.a
cstlincludedir = $(includedir)/cstl
cstlinclude_HEADERS = \
            calgorithm.h \
            cdeque.h \
            cfunctional.h \
            chash_map.h \
            chash_set.h \
            citerator.h \
            clist.h \
            cmap.h \
            cnumeric.h \
            cqueue.h \
            cset.h \
            cslist.h \
            cstack.h \
            cstl_algo_nonmutating.h \
            cstl_algo_nonmutating_private.h \
            cstl_algo_mutating.h \
            cstl_algo_mutating_private.h \
            cstl_algo_sorting.h \
            cstl_algo_sorting_private.h \
            cstl_alloc.h \
            cstl_avl_tree.h \
            cstl_avl_tree_iterator.h \
            cstl_avl_tree_private.h \
            cstl_basic_string.h \
            cstl_basic_string_iterator.h \
            cstl_basic_string_private.h \
            cstl_def.h \
            cstl_deque.h \
            cstl_deque_iterator.h \
            cstl_deque_private.h \
            cstl_function.h \
            cstl_function_private.h \
            cstl_hash_map.h \
            cstl_hash_map_iterator.h \
            cstl_hash_map_private.h \
            cstl_hash_multimap.h \
            cstl_hash_multimap_iterator.h \
            cstl_hash_multimap_private.h \
            cstl_hash_multiset.h \
            cstl_hash_multiset_iterator.h \
            cstl_hash_multiset_private.h \
            cstl_hash_set.h \
            cstl_hash_set_iterator.h \
            cstl_hash_set_private.h \
            cstl_hashtable.h \
            cstl_hashtable_iterator.h \
            cstl_hashtable_private.h \
            cstl_heap.h \
            cstl_iterator.h \
            cstl_iterator_private.h \
            cstl_list.h \
            cstl_list_iterator.h \
            cstl_list_private.h \
            cstl_map.h \
            cstl_map_iterator.h \
            cstl_map_private.h \
            cstl_multimap.h \
            cstl_multimap_iterator.h \
            cstl_multimap_private.h \
            cstl_multiset.h \
            cstl_multiset_iterator.h \
            cstl_multiset_private.h \
            cstl_numeric.h \
            cstl_numeric_private.h \
            cstl_pair.h \
            cstl_pair_private.h \
            cstl_priority_queue.h \
            cstl_priority_queue_private.h \
            cstl_queue.h \
            cstl_queue_private.h \
            cstl_rb_tree.h \
            cstl_rb_tree_iterator.h \
            cstl_rb_tree_private.h \
            cstl_set.h \
            cstl_set_iterator.h \
            cstl_set_private.h \
            cstl_slist.h \
            cstl_slist_iterator.h \
            cstl_slist_private.h \
            cstl_stack.h \
            cstl_stack_private.h \
            cstl_string.h \
            cstl_string_iterator.h \
            cstl_string_private.h \
            cstl_types.h \
            cstl_vector.h \
            cstl_vector_iterator.h \
            cstl_vector_private.h \
            cstring.h \
            cutility.h \
            cvector.h
