# for build libcstl.la
lib_LTLIBRARIES = libcstl.la
libcstl_la_SOURCES = cstl_algo.c \
		     cstl_algobase.c \
		     cstl_alloc.c cstl_alloc_aux.c cstl_alloc_aux.h \
		     cstl_avl_tree.c \
		     cstl_basic_string.c \
		     cstl_deque.c \
		     cstl_function.c \
		     cstl_hash_map.c \
		     cstl_hash_multimap.c \
		     cstl_hash_multiset.c \
		     cstl_hash_set.c \
		     cstl_hashtable.c \
		     cstl_heap.c \
		     cstl_iterator.c \
		     cstl_list.c \
		     cstl_map.c \
		     cstl_multimap.c \
		     cstl_multiset.c \
		     cstl_numeric.c \
		     cstl_pair.c \
		     cstl_queue.c \
		     cstl_rb_tree.c \
		     cstl_set.c \
		     cstl_slist.c \
		     cstl_stack.c \
		     cstl_string.c \
		     cstl_types.c \
		     cstl_vector.c cstl_vector_iterator.c cstl_vector_private.c cstl_vector_aux.c cstl_vector_aux.h
libcstl_la_CPPFLAGS = -I$(srcdir)/..
libcstl_la_CFLAGS = -Wall -Wextra
libcstl_la_LDFLAGS = -version-info 2:1:0
