# for build libcstl.la
lib_LTLIBRARIES = libcstl.la
libcstl_la_SOURCES = \
             cstl_algo_nonmutating.c cstl_algo_nonmutating_private.c \
             cstl_algo_mutating.c cstl_algo_mutating_private.c cstl_algo_mutating_aux.c cstl_algo_mutating_aux.h \
             cstl_algo_sorting.c cstl_algo_sorting_private.c cstl_algo_sorting_aux.c cstl_algo_sorting_aux.h \
             cstl_alloc.c cstl_alloc_aux.c cstl_alloc_aux.h \
             cstl_avl_tree.c cstl_avl_tree_iterator.c cstl_avl_tree_private.c cstl_avl_tree_aux.c cstl_avl_tree_aux.h \
             cstl_basic_string.c cstl_basic_string_iterator.c cstl_basic_string_private.c \
             cstl_basic_string_aux.c cstl_basic_string_aux.h \
             cstl_deque.c cstl_deque_iterator.c cstl_deque_private.c cstl_deque_aux.c cstl_deque_aux.h \
             cstl_function.c cstl_function_private.c \
             cstl_hash_map.c cstl_hash_map_iterator.c cstl_hash_map_private.c cstl_hash_map_aux.c cstl_hash_map_aux.h \
             cstl_hash_multimap.c cstl_hash_multimap_iterator.c cstl_hash_multimap_private.c cstl_hash_multimap_aux.c cstl_hash_multimap_aux.h \
             cstl_hash_multiset.c cstl_hash_multiset_iterator.c cstl_hash_multiset_private.c cstl_hash_multiset_aux.c cstl_hash_multiset_aux.h \
             cstl_hash_set.c cstl_hash_set_iterator.c cstl_hash_set_private.c cstl_hash_set_aux.c cstl_hash_set_aux.h \
             cstl_hashtable.c cstl_hashtable_iterator.c cstl_hashtable_private.c cstl_hashtable_aux.c cstl_hashtable_aux.h \
             cstl_heap.c cstl_heap_aux.c cstl_heap_aux.h \
             cstl_iterator.c cstl_iterator_private.c \
             cstl_list.c cstl_list_iterator.c cstl_list_private.c cstl_list_aux.c cstl_list_aux.h \
             cstl_map.c cstl_map_iterator.c cstl_map_private.c cstl_map_aux.c cstl_map_aux.h \
             cstl_multimap.c cstl_multimap_iterator.c cstl_multimap_private.c cstl_multimap_aux.c cstl_multimap_aux.h \
             cstl_multiset.c cstl_multiset_iterator.c cstl_multiset_private.c cstl_multiset_aux.c cstl_multiset_aux.h \
             cstl_numeric.c cstl_numeric_private.c \
             cstl_pair.c cstl_pair_private.c cstl_pair_aux.c cstl_pair_aux.h \
             cstl_priority_queue.c cstl_priority_queue_private.c \
             cstl_queue.c cstl_queue_private.c \
             cstl_rb_tree.c cstl_rb_tree_iterator.c cstl_rb_tree_private.c cstl_rb_tree_aux.c cstl_rb_tree_aux.h \
             cstl_set.c cstl_set_iterator.c cstl_set_private.c cstl_set_aux.c cstl_set_aux.h \
             cstl_slist.c cstl_slist_iterator.c cstl_slist_private.c cstl_slist_aux.c cstl_slist_aux.h \
             cstl_stack.c cstl_stack_private.c \
             cstl_string.c cstl_string_private.c \
             cstl_types.c cstl_types_builtin.c cstl_types_builtin.h cstl_types_parse.c cstl_types_parse.h cstl_types_aux.c cstl_types_aux.h \
             cstl_vector.c cstl_vector_iterator.c cstl_vector_private.c cstl_vector_aux.c cstl_vector_aux.h
libcstl_la_CPPFLAGS = -I$(srcdir)/..
libcstl_la_LDFLAGS = -version-info 5:0:3
