# for build test
check_PROGRAMS = it
it_SOURCES = test.c \
	       test_algo.c \
	       test_algobase.c \
	       test_avl_tree.c \
	       test_deque.c \
	       test_function.c \
	       test_hash_map.c \
	       test_hash_set.c \
	       test_hashtable.c \
	       test_heap.c \
	       test_list.c \
	       test_map.c \
	       test_numeric.c \
	       test_pair.c \
	       test_queue.c \
	       test_rb_tree.c \
	       test_set.c \
	       test_slist.c \
	       test_stack.c \
	       test_string.c \
	       test_type.c \
	       test_vector.c \
	       tree_traverse.c \
	       test_algo.h \
	       test_algobase.h \
	       test_avl_tree.h \
	       test_deque.h \
	       test_function.h \
	       test_hash_map.h \
	       test_hash_set.h \
	       test_hashtable.h \
	       test_heap.h \
	       test_list.h \
	       test_map.h \
	       test_numeric.h \
	       test_pair.h \
	       test_queue.h \
	       test_rb_tree.h \
	       test_set.h \
	       test_slist.h \
	       test_stack.h \
	       test_string.h \
	       test_type.h \
	       test_vector.h \
	       tree_traverse.h
it_CPPFLAGS = -I$(srcdir)/../..
it_LDADD = ../../src/libcstl.la
CLEANFILES = core.* string_output.txt
#TESTS = $(check_PROGRAMS)
